--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
   --text: #04395e;
 }
 
-.App {
+.todo {
   margin: 30px 0 0 30px;
   width: 500px;
   border-radius: 10px;
@@ -136,3 +136,29 @@ code {
   border-radius: 5px;
 }
 
+.App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
